// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`floatDisplaceAlternative3 renders 0 1`] = `
Array [
  .c0 {
  float-displace--alternative-3: 0;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: 0;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: 0;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`floatDisplaceAlternative3 renders function 1`] = `
Array [
  .c0 {
  float-displace--alternative-3: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: has;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: has;
}

<div
    className="c0"
  />,
]
`;

exports[`floatDisplaceAlternative3 renders invalid theme path 1`] = `
Array [
  .c0 {
  float-displace--alternative-3: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`floatDisplaceAlternative3 renders negative number 1`] = `
Array [
  .c0 {
  float-displace--alternative-3: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`floatDisplaceAlternative3 renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  float-displace--alternative-3: July;
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    float-displace--alternative-3: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: July;
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    float-displace--alternative-3: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    float-displace--alternative-3: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    float-displace--alternative-3: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`floatDisplaceAlternative3 renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    float-displace--alternative-3: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    float-displace--alternative-3: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    float-displace--alternative-3: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    float-displace--alternative-3: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    float-displace--alternative-3: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`floatDisplaceAlternative3 renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  float-displace--alternative-3: July;
}

@media May {
  .c0 {
    float-displace--alternative-3: August;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: September;
  }
}

@media January {
  .c0 {
    float-displace--alternative-3: November;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: August;
  }
}

@media June {
  .c0 {
    float-displace--alternative-3: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: July;
}

@media May {
  .c0 {
    float-displace--alternative-3: August;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: September;
  }
}

@media January {
  .c0 {
    float-displace--alternative-3: November;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: August;
  }
}

@media June {
  .c0 {
    float-displace--alternative-3: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    float-displace--alternative-3: November;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: January;
  }
}

@media January {
  .c0 {
    float-displace--alternative-3: December;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: April;
  }
}

@media June {
  .c0 {
    float-displace--alternative-3: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    float-displace--alternative-3: November;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: January;
  }
}

@media January {
  .c0 {
    float-displace--alternative-3: December;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: April;
  }
}

@media June {
  .c0 {
    float-displace--alternative-3: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`floatDisplaceAlternative3 renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    float-displace--alternative-3: July;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: August;
  }
}

@media January {
  .c0 {
    float-displace--alternative-3: September;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: November;
  }
}

@media June {
  .c0 {
    float-displace--alternative-3: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    float-displace--alternative-3: July;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: August;
  }
}

@media January {
  .c0 {
    float-displace--alternative-3: September;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: November;
  }
}

@media June {
  .c0 {
    float-displace--alternative-3: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    float-displace--alternative-3: January;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: December;
  }
}

@media January {
  .c0 {
    float-displace--alternative-3: April;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: May;
  }
}

@media June {
  .c0 {
    float-displace--alternative-3: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    float-displace--alternative-3: January;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: December;
  }
}

@media January {
  .c0 {
    float-displace--alternative-3: April;
  }
}

@media April {
  .c0 {
    float-displace--alternative-3: May;
  }
}

@media June {
  .c0 {
    float-displace--alternative-3: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`floatDisplaceAlternative3 renders postitive number 1`] = `
Array [
  .c0 {
  float-displace--alternative-3: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`floatDisplaceAlternative3 renders string 1`] = `
Array [
  .c0 {
  float-displace--alternative-3: July;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: July;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: June;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: June;
}

<div
    className="c0"
  />,
]
`;

exports[`floatDisplaceAlternative3 renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`floatDisplaceAlternative3 renders valid theme path 1`] = `
Array [
  .c0 {
  float-displace--alternative-3: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  float-displace--alternative-3: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
